--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
-    "styled-components": "^4.3.0",
-    "yup": "^0.28.1"
+    "styled-components": "^4.3.0"
   },
   "devDependencies": {
     "react-app-rewired": "^2.1.1"
