--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "test": "react-app-rewired test"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.0",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
-    "react": "^16.8.6",
-    "react-app-polyfill": "^0.2.2",
-    "react-dom": "^16.8.6",
+    "history": "^4.10.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.6",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.1.8",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
