--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "styled-components": "^4.3.0"
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "react-app-rewired": "^2.1.1"
   },
   "prettier": {
